LU-7825 mdt: release parent lock correctly for rename

Release source and target parent lock correctly in
mdt_reint_rename_internal().

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: Iea4f6c4571362bff700167bdf29d2833d5f30a4d
Reviewed-on: http://review.whamcloud.com/18707
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>